package clase_5.PatronAdapter;

public interface MedidorTemperatura {
    double obtenerTemperaturaCelsius();
}
